# k8s-playground

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  build-docker.sh  gen.sh  go.work  go.work.sum  tests.pkl
.github/workflows/: docker-image.yml
deployment/: values.yaml
deployment/templates/: ingress.yaml  roles.yaml  storage.yaml
proto/: go.mod  storage.pb.go  storage.proto
raft/: config.go  go.mod  log.go  peer.go  queue.go  raft.go  server.go  state.go
raft-test/: go.mod  main.go  start.sh
services/storage/: Cargo.toml
services/storage/src/: main.rs
storage/: go.mod  go.sum  k8s.go  main.go  raft.go
tester/: conf.schema.pkl  go.mod  go.sum  k8s.go  main.go  peer.go  tester.go  ui.go
tester/config/: go.mod  go.sum
