[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
envy = "0.4.2"
futures-util = "0.3.30"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = ["http2", "server", "http1", "full"] }
hyper-util = { version = "0.1.3", features = ["tokio", "server", "http2", "full"] }
pin-project = "1.1.5"
serde = { version = "1.0.197", features = ["derive"] }
static_assertions = "1.1.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["io"] }
tower = { version = "0.4.13", features = ["limit", "util"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4"] }
